# system-metrics-monitoring

./: .gitignore  Dockerfile  README.md  collected_metrics_logs.txt  compose.yaml  pyproject.toml
docs/: architecture.drawio  data_collection.md
scripts/: run.sh
src/: main.py
src/collectors/: data_model.py  system_metrics_collector.py  utils.py
src/messaging/: pub_sub_messaging.py
src/utils/: config.py
